
??-08-2012 4.0.90
- Database fix for recurring events that could have been added when there was a bug in previous version.
- Updated German language
- Updated Italian language
- Bugfix: No files got attached to the email composer when using "Send files" in the Files module when the users default template is 'None'
- Bugfix: Email module MessageGrid will expand when it is collapsed and the visible email gets deleted.

08-08-2012 4.0.89

- Fixed problem with default background color in events
- Fix export orientation when exporting PDFs works again
- Fix calendar:
 -- update event with resource.
 -- delete resource from event
 -- select resource when only write permissions
 -- send mail when deleting event to participants
- Fixed label Agent when exporting tickets
- Fixed hr translation in Links module. 
- Fixed task bug in Caldav backend
- User can enter IMAP password on IMAP connection failed.

03-08-2012 4.0.88
- Fixed bug: E-mail download link date one day off
- Signed GOTA
- Added aclModified check to activeRecord to determine if an Acl is changed.

02-08-2012 4.0.87
- Fixed Bug: Cannot export and import uuid in addressbook contacts. (Now the uuid field is available in export and import)
- Fixed Language: Timeregistration translation in French for customfields is fixed
- Updated German translation of GOTA
- Fixed bug in SyncML

02-08-2012 4.0.86
- Fixed Bug: Timeregistration export table columns are on top of each other when having a long project name
- Fixed bug: Settings->Synchronisation->Email-Account is not saved after panel submit
- Fixed bug: Autocomplete in e-mail sometimes didn't work
- Fixed bug: Funambol sync sometimes imported garbled characters.
- Updated Norwegian and German translations

01-08-2012 4.0.85
- Updated German
- Small bug fixes

30-07-2012 4.0.83
- Small bug fixes

30-07-2012 4.0.82
- Sync only selected addressbooks and calendars with CalDAV and CardDAV
- Small bug fixes

30-07-2012 4.0.81
- Fixed file system permissions issue.
